# test.starbattlelab.github.io

./: .gitignore  3starbattles_player.py  BruteForce_Starbattles.py  BruteForce_Starbattles2.py  BruteForce_Starbattles3.py  CNAME  LogicalSolver.py  README.md  RedditBruteForce.py  Z3AndPlayer.py  Z3Solver.py  debug_log.txt  generator.py  starbattle_player.py  starbattle_player2.py  testFormats.py
Extensions/: discord.html
LegacyImplementations/: README.md
LegacyImplementations/API-main/: README.md  pyproject.toml  run.py
LegacyImplementations/API-main/backend/: app.py  constants.py  history_manager.py  puzzle_handler.py  requirements.txt  z3_solver.py
LegacyImplementations/API-main/backend/puzzles/: 3.txt  7.txt
LegacyImplementations/API-main/frontend/: api.js  config.js  index.html  main.js  style.css
LegacyImplementations/API-main/frontend/mobile/: engine.logic.js  index.html  service.api.js  state.config.js
LegacyImplementations/API-main/js_backend/: app.js  constants.js  historyManager.js  package-lock.json  package.json  puzzleHandler.js  z3Solver.js
LegacyImplementations/API-main/js_backend/puzzles/: 1.txt  10.txt  11.txt  5.txt  6.txt  README.md
LiveDemo/: script.js  style.css
Main/: api.js  config.js  drawing.js  import.js  index.html  logic.js  main.js  puzzle_handler.js  solver.js  style.css  tailwind.css
MiscTools/: SBNBatchValidator.py  Z3Solver.py  file_consolidator.py  puzzle_variator.py  update_puzzles.py
OldPygameImplementation/: action_handlers.py  constants.py  converted_puzzles.sbn  game_state.py  main.py  puzzle_handler.py  (+4 more)
(+103 files in other folders)
